feat: unify UI tokens, page shells, and design preview